Documentation, refactor, cleanup, etc.
* A shit ton of documentation
* Better comments
* Lots of cleanup
* Some refactoring of methods
* Move FastNoiseLite to its own package outside of the org.wysko
 .midis2jam2 namespace
* Externalize strings for GUIs for i18n
* Remove AdvancedDisplay.java, will bring this back later
* Add locale switching support
* Added UtilsTest for testing utility functions